# structures

./: .eslintignore  .eslintrc.json  .gitignore  .npmrc  README.md  api-extractor.json  azure-pipelines-release.yml  azure-pipelines.yml  jest.config.js  ng-package.json  package.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
src/: BUILD.bazel  jest.config.js  polyfills.ts  public-api.ts  tsconfig.lib.json  tsconfig.spec.json
src/lib/: behavior-subject-map.spec.ts  behavior-subject-map.ts  chain-load-request.ts  doubly-linked-list.ts  linked-list-item.ts  linked-list-value.ts  list-operator.ts  load-metadata.ts  load-request.ts  retrieve-direction.ts  update-consumer.ts
src/lib/doubly-linked-list/: doubly-linked-list.ts  linked-list-item.ts  list-operator.ts  unique-control.decorator.ts
src/lib/message-chain/: chain-limit-control.decorator.ts  chain-load-request.ts  item-freshness-control.decorator.ts  load-direction.ts  message-chain-value.ts  message-chain.element.ts  message-chain.ts  retrieve-direction.ts
src/tests/: doubly-linked-list-performance.spec.ts
src/tests/performance/: doubly-linked-list-performance.pspec.ts
src/tests/unit/: doubly-linked-list.factory.ts  doubly-linked-list.spec.ts
src/tests/unit/doubly-linked-list/: doubly-linked-list.factory.ts  doubly-linked-list.spec.ts  iteration-pass-assert.ts  linked-list-item.spec.ts  unique-control.decorator.spec.ts
src/tests/unit/message-chain/: chain-limit-control.decorator.spec.ts  item-freshness-control.decorator.spec.ts  message-chain-element.entity.spec.ts  message-chain.factory.ts  (+1 more)
(+75 files in other folders)
