package(default_visibility=["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module", "ng_package")
load("@npm_bazel_typescript//:index.bzl", "ts_config", "ts_library")

ts_config(
    name = "structures.tsconfig.lib",
    src = "tsconfig.lib.json",
    deps = ["//:tsconfig.json"],
)

ng_module(
    name = "structures",
    tsconfig = ":structures.tsconfig.lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "test.ts",
            "setup-jest.ts",
            "lib/tests/**"
        ],
    ),
    module_name = "@webcobra/structures",
    generate_ve_shims = True,
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@types",
        "@npm//rxjs",
    ],
)

ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = "public-api.ts",
    tags = [
        #
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":transponder"
    ],
)
